2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/utils/Makefile.am
	  src/Makefile.am
	  configure.ac
	  src/utils/utils.c
	  src/utils/utils.h
	  src/gnome-keyring-md5.c -> src/utils/gnome-keyring-md5.c
	  src/gnome-keyring-md5.h -> src/utils/gnome-keyring-md5.h
		- Move gnome-keyring-md5 stuff to a library that both the applet and
			the wireless security stuff can easily use
		- Put utils_bin2hexstr() in utils.c

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/Makefile.am
		- (fill_connection): Use utils_bin2hexstr() from src/utils/
	  
2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
	  src/wireless-security/Makefile.am
	  src/Makefile.am
	  configure.ac
		- wireless security UI bits; to be statically linked into both the
			applet and the connection editor

	* src/wireless-dialog.c
	  src/wireless-dialog.h
	  src/applet.glade
		- Implement wireless dialog using security UI bits

	* src/applet.c
		- (other_wireless_activate_cb, other_wireless_response_cb): hook
			wireless dialog up to Connect to Other Network...

2007-10-12  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (nma_schedule_warning_dialog): don't need an 'applet' argument

2007-10-12  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c: Don't hard code the property names of the libnm-glib classes,
	use the defined strings.
	(notify_ap_prop_changed_cb): Fix a typo to include the AP flags property to hash
	calculation.

2007-10-10  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_write_connection): add optional filter function so callers
			can choose not to write some keys

	* src/vpn-properties/nm-vpn-properties.c
		- (write_vpn_connection_to_gconf): update for changes to
			nm_gconf_write_connection()

	* src/applet-dbus-settings.c